# GraphicsHW8

./: CMakeLists.txt  README  main.cpp
cmake/: FindOpenCV.cmake~
include/: Polynomial.hpp  PolynomialRootFinder.hpp
output/: out_2015-11-20.15:50:42  out_2015-11-20.17:04:18  out_2015-11-20.17:07:44
src/: Polynomial.cpp  PolynomialRootFinder.cpp  plyloader.cpp
test/: README  easyprog  test_opencv.cpp
